@startuml
interface ILogicComponent {
  + GetInput(pin: uint8_t) : bool
  + GetOutput(pin: uint8_t) : bool
  + SetInput(pin: uint8_t, value: bool) : void
  + ConnectOutput(output_pin: uint8_t, other: ILogicComponent, input_pin: uint8_t) : void
}

class not_gate {
  - value : bool
  + GetInput(pin: uint8_t) : bool
  + GetOutput(pin: uint8_t) : bool
  + SetInput(pin: uint8_t, value: bool) : void
  + ConnectOutput(output_pin: uint8_t, other: ILogicComponent, input_pin: uint8_t) : void
}

class and_gate {
  - value : bool
  + GetInput(pin: uint8_t) : bool
  + GetOutput(pin: uint8_t) : bool
  + SetInput(pin: uint8_t, value: bool) : void
  + ConnectOutput(output_pin: uint8_t, other: ILogicComponent, input_pin: uint8_t) : void
}

class invalid_pin_exception {
  + invalid_pin_exception() : void
  + invalid_pin_exception(message: string) : void
}

class connection{
}

ILogicComponent -->  connection

ILogicComponent <|-- not_gate
ILogicComponent <|-- and_gate


ILogicComponent --> invalid_pin_exception : throws exception

@enduml